<resources>
    <string name="app_name">Route IQ</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="lemma">¿Estas listo para tu experiencia turistica?</string>
    <string name="descripcion_del_lugar">Descripcion del lugar</string>
    <string name="nombre_del_lugar">Nombre del lugar</string>

    <string-array name="users_types">
        <item>Turista</item>
        <item>Empresa</item>
    </string-array>
</resources>