<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="60dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".login.MainActivity"
    >

    <TextView
        android:id="@+id/sigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:fontFamily="cursive"
        android:textSize="50sp"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lemma"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="15sp"
        android:textAlignment="center"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:labelFor="@id/email"
            android:id="@+id/emailLabel"
            android:layout_alignParentStart="true"
            />

        <EditText
            android:layout_below="@id/emailLabel"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_centerInParent="true"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:labelFor="@id/password"
            android:id="@+id/passwordLabel"
            android:layout_below="@id/email"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:layout_below="@id/passwordLabel"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/iniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/iniciar_sesion"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:text="@string/no_tienes_una_cuenta"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="18sp"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/createAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/crea_una_cuenta"
            android:textColor="@android:color/holo_blue_light"
            android:background="@color/transparent"
            />
    </LinearLayout>
    <Button
            android:id="@+id/anonymousLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Anónimo" />

</LinearLayout>